--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
 transformers==4.31.0
-torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu
+torch==2.5.0
 numpy==1.24.3
 plotly==5.14.1
 gunicorn==20.1.0
