--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,14 @@
 services:
   - type: web
     name: uml-process-extractor
-    env: python
-    pythonVersion: "3.9.16"
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    runtime: python
+    plan: free
+    region: oregon
+    branch: main
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: "3.9.16"
+        value: 3.9.16
